@@ -1,5 +1,10 @@
 $Id$
 
+2014-11-29  Christian Franke  <franke@computer.org>
+
+	os_win32.cpp: Add strnicmp() compatibility macro for newer Cygwin
+	releases.
+
 2014-11-16  Tommy Vestermark  <tommy.vestermark@gmail.com>
 
 	drivedb.h: USB: Prolific PL2773 (0x067b:0x2773) (ticket #482).
